--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="pt-br" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Dança</title>
+    <img id= "dança" fasrc="dança.jpg" alt="">
+    <link rel="stylesheet" href="estilo.css">
+  </head>
+  <body>
 
+      <nav>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="pagina01.html">Página 01</a></li>
+              <li><a href="pagina02.html">Página 02</a></li>
+          </ul>
+      </nav>
+</div>
+
+<div class="conteudo">
+  <h1>Não é sobre executar os movimentos, é sobre sentir eles</h1>
+</div>
+
+
+
+<div class="conteudo3">
+  <h1>Expresse sua dor, sua raiva ou ate mesmo sua felicidade</h1>
+</div>
+
+<div class="rodape">
+  Aluno: Ana Julia Magioto N°04 1°B
+
+</div>
+
+  </body>
+</html>
